--- a/Views/Bookings/Create.cshtml
+++ b/Views/Bookings/Create.cshtml
@@ -34,7 +34,7 @@
 </div>
 
 <div class="mt-3">
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-sm btn-info me-1">Back to List</a>
 </div>
 
 @section Scripts {
