--- a/Views/Venues/Create.cshtml
+++ b/Views/Venues/Create.cshtml
@@ -41,7 +41,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn btn-sm btn-info me-1">Back to List</a>
 </div>
 
 @section Scripts {
