--- a/Views/Bookings/Delete.cshtml
+++ b/Views/Bookings/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Booking
+﻿@model EventEase.Web.Models.Booking
 
 @{
     ViewData["Title"] = "Delete";
@@ -15,13 +15,19 @@
             @Html.DisplayNameFor(model => model.Event)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.EventId)
+            @Html.DisplayFor(model => model.Event.Description)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Venue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venue.VenueId)
+            @Html.DisplayFor(model => model.Venue.ImageUrl)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.BookingDate)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.BookingDate)
         </dd>
     </dl>
     
