--- a/Views/Bookings/Edit.cshtml
+++ b/Views/Bookings/Edit.cshtml
@@ -1,4 +1,4 @@
-@model Booking
+﻿@model EventEase.Web.Models.Booking
 
 @{
     ViewData["Title"] = "Edit";
@@ -22,6 +22,11 @@
                 <label asp-for="VenueId" class="control-label"></label>
                 <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueId"></select>
                 <span asp-validation-for="VenueId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="BookingDate" class="control-label"></label>
+                <input asp-for="BookingDate" class="form-control" />
+                <span asp-validation-for="BookingDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
