--- a/Views/Bookings/Create.cshtml
+++ b/Views/Bookings/Create.cshtml
@@ -14,15 +14,26 @@
             @Html.AntiForgeryToken()
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="EventId"></label>
-                    <select asp-for="EventId" class="form-control" asp-items="ViewBag.EventId"></select>
-                </div>
 
-                <div class="form-group">
-                    <label asp-for="VenueId"></label>
-                    <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueId"></select>
-                </div>
+            <div class="form-group">
+                <label asp-for="EventId" class="control-label"></label>
+                <select asp-for="EventId" class="form-control" asp-items="ViewBag.EventId" id="eventSelect"></select>
+                <span asp-validation-for="EventId" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="VenueId" class="control-label"></label>
+                <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueId"></select>
+                <span asp-validation-for="VenueId" class="text-danger"></span>
+            </div>
+
+            <!-- Display only (not submitted) -->
+            <div class="form-group">
+                <label asp-for="BookingDate" class="control-label"></label>
+                <input type="text" class="form-control" id="bookingDate"
+                       value="@ViewBag.BookingDate" disabled />
+            </div>
+
 
             <div class="form-group mt-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
@@ -49,7 +60,7 @@
                 fetch('/Events/GetEventDate/' + selectedEventId)
                     .then(response => response.json())
                     .then(data => {
-                        bookingDateInput.value = data.date; // sets the read-only input
+                        bookingDateInput.value = data.date;
                     })
                     .catch(() => {
                         bookingDateInput.value = '';
@@ -59,5 +70,4 @@
             }
         });
     </script>
-
 }
