--- a/Views/Events/Delete.cshtml
+++ b/Views/Events/Delete.cshtml
@@ -1,4 +1,4 @@
-@model Event
+@model EventEase.Web.Models.Booking
 
 @{
     ViewData["Title"] = "Delete";
@@ -6,39 +6,36 @@
 
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this booking?</h3>
 <div>
-    <h4>Event</h4>
+    <h4>Booking</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Event)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventName)
+        <dd class="col-sm-10">
+            @Model.Event?.EventName
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Venue)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venue.VenueId)
+        <dd class="col-sm-10">
+            @Model.Venue?.VenueName
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BookingDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Model.BookingDate?.ToString("yyyy-MM-dd")
         </dd>
     </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="EventId" />
+
+    <form asp-action="Delete" method="post">
+        @Html.AntiForgeryToken()
+        <input type="hidden" asp-for="BookingId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
