--- a/Views/Events/Details.cshtml
+++ b/Views/Events/Details.cshtml
@@ -1,4 +1,4 @@
-@model Event
+@model EventEase.Web.Models.Booking
 
 @{
     ViewData["Title"] = "Details";
@@ -7,36 +7,32 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Event</h4>
+    <h4>Booking</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventName)
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Event)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventName)
+        <dd class="col-sm-10">
+            @Model.Event?.EventName
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EventDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EventDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
+
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Venue)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venue.VenueId)
+        <dd class="col-sm-10">
+            @Model.Venue?.VenueName
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.BookingDate)
+        </dt>
+        <dd class="col-sm-10">
+            @Model.BookingDate?.ToString("yyyy-MM-dd")
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.EventId">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model?.BookingId" class="btn btn-warning">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
