--- a/Views/Bookings/Details.cshtml
+++ b/Views/Bookings/Details.cshtml
@@ -1,36 +1,29 @@
 ﻿@model EventEase.Web.Models.Booking
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Booking Details";
 }
 
-<h1>Details</h1>
+<h1>Booking Details</h1>
 
-<div>
-    <h4>Booking</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Event)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Event.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Venue)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Venue.ImageUrl)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.BookingDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.BookingDate)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.BookingId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<dl class="row">
+    <dt class="col-sm-2">Event</dt>
+    <dd class="col-sm-10">@Model.Event?.EventName</dd>
+
+    <dt class="col-sm-2">Start Time</dt>
+    <dd class="col-sm-10">@Model.Event?.StartTime</dd>
+
+    <dt class="col-sm-2">End Time</dt>
+    <dd class="col-sm-10">@Model.Event?.EndTime</dd>
+
+    <dt class="col-sm-2">Venue</dt>
+    <dd class="col-sm-10">@Model.Venue?.VenueName</dd>
+
+    <dt class="col-sm-2">Booking Date</dt>
+    <dd class="col-sm-10">@Model.BookingDate?.ToString("yyyy-MM-dd")</dd>
+</dl>
+
+<p>
+    <a asp-action="Edit" asp-route-id="@Model.BookingId" class="btn btn-primary">Edit</a>
+    <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+</p>
