--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -10,8 +10,8 @@
     <a asp-action="Create" class="btn btn-success">Create New Booking</a>
 </p>
 
-<table class="table table-striped">
-    <thead>
+<table class="table table-striped table-hover table-bordered align-middle">
+    <thead class="table-primary">
         <tr>
             <th>Event</th>
             <th>Start Time</th>
