--- a/Views/Events/Create.cshtml
+++ b/Views/Events/Create.cshtml
@@ -1,50 +1,48 @@
 @model EventEase.Web.Models.Event
 
 @{
-    ViewData["Title"] = "Create Event";
+    ViewData["Title"] = "Add Event";
 }
 
-<h1>Create Event</h1>
-
-<h4>Event</h4>
+<h1 class="text-center">Add A New Event</h1>
 <hr />
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-6">
-        <form asp-action="Create">
+        <form asp-action="Create" method="post" class="p-4 bg-light border rounded shadow-sm">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            <div class="form-group">
-                <label asp-for="EventName" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="EventName" class="form-label"></label>
                 <input asp-for="EventName" class="form-control" />
                 <span asp-validation-for="EventName" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="EventDate" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="EventDate" class="form-label"></label>
                 <input asp-for="EventDate" class="form-control" type="date" />
                 <span asp-validation-for="EventDate" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="StartTime" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="StartTime" class="form-label"></label>
                 <input asp-for="StartTime" class="form-control" type="time" />
                 <span asp-validation-for="StartTime" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="EndTime" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="EndTime" class="form-label"></label>
                 <input asp-for="EndTime" class="form-control" type="time" />
                 <span asp-validation-for="EndTime" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Description" class="form-label"></label>
                 <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
 
-            <div class="form-group">
-                <label asp-for="VenueId" class="control-label">Venue</label>
+            <div class="mb-3">
+                <label asp-for="VenueId" class="form-label">Venue</label>
                 <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueId"></select>
                 <span asp-validation-for="VenueId" class="text-danger"></span>
             </div>
