--- a/Views/Events/Index.cshtml
+++ b/Views/Events/Index.cshtml
@@ -10,8 +10,8 @@
     <a asp-action="Create" class="btn btn-success">Create New Event</a>
 </p>
 
-<table class="table table-striped">
-    <thead>
+<table class="table table-striped table-hover table-bordered align-middle">
+    <thead class="table-primary">
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.EventName)
