--- a/Views/Venues/Create.cshtml
+++ b/Views/Venues/Create.cshtml
@@ -1,39 +1,38 @@
 @model Venue
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add Venue";
 }
 
-<h1>Create</h1>
-
-<h4>Venue</h4>
+<h1 class="text-center">Add A New Venue</h1>
 <hr />
-<div class="row">
+<div class="row justify-content-center">
     <div class="col-md-4">
-        <form asp-action="Create" method="post">
+        <form asp-action="Create" method="post" class="p-4 bg-light border rounded shadow-sm">
             @Html.AntiForgeryToken()
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="VenueName" class="control-label"></label>
+
+            <div class="mb-3">
+                <label asp-for="VenueName" class="form-label"></label>
                 <input asp-for="VenueName" class="form-control" />
                 <span asp-validation-for="VenueName" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Location" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Location" class="form-label"></label>
                 <input asp-for="Location" class="form-control" />
                 <span asp-validation-for="Location" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Capacity" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="Capacity" class="form-label"></label>
                 <input asp-for="Capacity" class="form-control" />
                 <span asp-validation-for="Capacity" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="ImageUrl" class="control-label"></label>
+            <div class="mb-3">
+                <label asp-for="ImageUrl" class="form-label"></label>
                 <input asp-for="ImageUrl" class="form-control" />
                 <span asp-validation-for="ImageUrl" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="mb-3">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
