--- a/Views/Venues/Index.cshtml
+++ b/Views/Venues/Index.cshtml
@@ -4,14 +4,14 @@
     ViewData["Title"] = "Venues";
 }
 
-<h1 class="text-center">Venues</h1>
+<h1>Venues</h1>
 
-<p class="text-center">
+<p>
     <a asp-action="Create" class="btn btn-success">Create New Venue</a>
 </p>
 
-<table class="table table-striped table-bordered">
-    <thead class="table-dark">
+<table class="table table-striped table-hover table-bordered align-middle">
+    <thead class="table-primary">
         <tr>
             <th>Venue Name</th>
             <th>Location</th>
