--- a/Views/Bookings/Index.cshtml
+++ b/Views/Bookings/Index.cshtml
@@ -37,5 +37,11 @@
                 </td>
             </tr>
         }
+        else
+        {
+        <tr>
+            <td colspan="5" class="text-center">No bookings available.</td>
+        </tr>
+        }
     </tbody>
 </table>
