--- a/Views/Events/Index.cshtml
+++ b/Views/Events/Index.cshtml
@@ -63,5 +63,11 @@
                 </td>
             </tr>
         }
+        else
+        {
+        <tr>
+            <td colspan="5" class="text-center">No events available.</td>
+        </tr>
+        }
     </tbody>
 </table>
